--- a/generators/app/templates/public/index.html
+++ b/generators/app/templates/public/index.html
@@ -3,15 +3,15 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width">
-   <title>APEX</title>
+   <title><%= options.appName %></title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/bootstrap.min.css">
-   <script src="http://localhost:35729/livereload.js"></script>
+   <script id="livereload" src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
    <div id="container">
       If you can see this then something is wrong!
    </div>
-   <script type="text/JavaScript" src='build/bundle.js'></script>
+   <script id="entry" type="text/JavaScript" src='build/bundle.js'></script>
 </body>
 </html>
