Added backbone.model example. Added Font-Awesome.

--- a/generators/app/templates/public/index.html
+++ b/generators/app/templates/public/index.html
@@ -4,13 +4,15 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width">
    <title><%= options.appName %></title>
+   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" href="css/font-awesome.min.css">
    <script id="livereload" src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
    <div id="container">
-      If you can see this then something is wrong!
+      <center><br/><i class="fa fa-cog fa-spin"></i></center>
    </div>
    <script id="entry" type="text/JavaScript" src='build/bundle.js'></script>
 </body>
