Added some server side views (for help and about pages) and default router to show these views.

--- a/generators/app/templates/app/views/error.handlebars
+++ b/generators/app/templates/app/views/error.handlebars
@@ -1,3 +1,8 @@
-{{ error.status }} : {{ message }}
-<br /><br />
-{{ error.stack }}
+<br />
+<div class="container">
+   <div class="jumbotron">
+      <h3>{{ error.status }} : {{ message }}</h3>
+      <br />
+      {{ error.stack }}
+   </div>
+</div>
