--- a/generators/app/templates/app/views/layouts/main.handlebars
+++ b/generators/app/templates/app/views/layouts/main.handlebars
@@ -3,8 +3,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width">
-   <title>{{title }}</title>
+   <title>{{title}}</title>
    <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="/css/bootstrap.min.css">
+   <link rel="stylesheet" href="/css/font-awesome.min.css">
    {{#if ENV_DEVELOPMENT}}
    <script src="http://localhost:35729/livereload.js"></script>
    {{/if}}
